@@ -2,6 +2,7 @@ package com.sharingdonation.service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -49,6 +50,6 @@ public class AreaService {
 			areaDto.setSharingCount(count);
 			
 			return areaDto;
-		}).toList();
+		}).collect(Collectors.toList());
 	}
 }
